# dante-tr

./: .gitattributes  .gitignore  Cargo.toml  Dante_cli_wrapper.sh  Makefile  README.md  env.yml  main.typ
dante_cli/: Cargo.toml
dante_cli/src/: main.rs  reporting.rs
dante_cli/templates/: report_static.html
dante_gui/: .gitattributes  .gitignore  Cargo.toml  README.md  build.rs  data.json
dante_gui/assets/: STRSet_20220902.tsv  STRSet_20250311.tsv  dante_remastr_standalone  generate_allele_size_distributions.py  template.meta.tsv  template2.meta.tsv
dante_gui/assets/includes/: template.meta.tsv
dante_gui/assets/reporting/typst/: report_onepage.typ  report_result.typ
dante_gui/assets/templates/: report_onepage.typ  single-results-report.typ
dante_gui/example_data/: README.md
dante_gui/src/: analysis_common.rs  analysis_family.rs  analysis_single.rs  async_tasks.rs  editor_results.rs  main.rs  metadata_editor.rs  pdf_reporting.rs  welcome_screen.rs
dante_gui/src/components/: mod.rs  motif_selection.rs
dante_gui/src/report_data/: STRset.tsv  first.txt  metadata.tsv  report_result.typ  second.txt  third.txt
dante_lib/: Cargo.toml  DM2.annotations.tsv  genotyping_test_data.txt
dante_lib/src/: annotation.rs  bam_index.rs  bam_ops.rs  df_ops.rs  genotyping.rs  hmm.rs  io.rs  lib.rs  motif_correction.rs  phasing.rs  repeats.rs  reporting.rs
dante_py/: .gitignore  dante_generate_msa.py  dante_remastr_simple.py  dante_remastr_simple_agg_and_report.py  pyproject.toml
dante_py/includes/: SOURCES.txt
dante_py/src_new/: constants.py  dante_generate_msa.py  genotyping.py  genotyping2.py  genotyping3.py  genotyping4.py  genotyping_test.py  haplotypes.py  motif_stats.py
dante_py/templates/: report_template2_static.html
data/: chromosomeX_to_bam_map.txt  emissions.npy  log_emit_f32.npy  log_init_f32.npy  log_trans_f32.npy  mini.bam  mini.bam.bai  mini_HGVS.txt  nomenclature_hgs_1Q_with_names.tsv  nomenclature_hgs_1Q_wo_names.tsv  transitions_f32.npy
data/test/: HGVS.txt  chromosomeX.fna  log_emit_f32.npy  log_init_f32.npy  log_trans_f32.npy  mini.bam  mini.bam.bai  mini_HGVS.txt  nomenclature_hgs_1Q_with_names.tsv  nomenclature_hgs_1Q_wo_names.tsv
example_data/: 01_in_dante_nomenclatures_predominant.tsv  in_HG002.GRCh38.selected_w_pairs.bam  in_HG002.GRCh38.selected_w_pairs.bam.bai  in_all_pass.vhg002v1.selected.bam  in_all_pass.vhg002v1.selected.bam.bai
ods_test/: .gitignore  Cargo.toml
ods_test/.cargo/: config.toml
ods_test/src/: main.rs
src/: annotate.rs  bam_index.rs  cli.rs  consistency.rs  experimental.rs  fuzzy.rs  hmm.rs  io.rs  lib.rs  main.rs  motif_correction.rs  repeats.rs
