[package]
name = "remastr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
noodles = { version = "0.60.0", features = ["sam", "bam", "fasta", "csi", "bgzf", "fastq"] }
hgvs = "0.10.1"
nom = "7.1.3"
float-cmp = "0.9.0"
ndarray-npy = "0.8.1"
ndarray = "0.15.6"
rayon = "1.7.0"
clap = { version = "4.3.21", features = ["derive"] }
counter = "0.5.7"

[[bin]]
name = "annotate"
path = "src/annotate.rs"
test = true

[[bin]]
name = "remastr"
path = "src/main.rs"

# [profile.test.build-override]
# rustflags = ["-Awarnings"]
