[package]
name = "remastr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
noodles = { version = "0.75.0", features = ["sam", "bam", "fasta", "csi", "bgzf", "fastq"] }
nom = "7.1.3"
ndarray = "0.15.6"
rayon = "1.7.0"
counter = "0.5.7"

# used only by CLI
clap = { version = "4.3.21", features = ["derive"] }

# used only by GUI
iced = { version = "0.13.1", features = ["image"] }
native-dialog = "0.7.0"
opener = "0.7.2"

# [build-dependencies]
[dev-dependencies]
hgvs = "0.10.1"
float-cmp = "0.9.0"
ndarray-npy = "0.8.1"

# rustup target add x86_64-pc-windows-gnu
# sudo pacman -S mingw-w64-gcc
# cargo build --target x86_64-pc-windows-gnu

# [profile.test.build-override]
# rustflags = ["-Awarnings"]

# [[bin]]
# name = "annotate"
# path = "src/annotate.rs"
# test = true

# [[bin]]
# name = "remastr"
# path = "src/main.rs"
