[package]
name = "dante_gui"
version = "0.1.0"
edition = "2021"

[dependencies]
remastr = { path = "../"}

iced = { version = "0.13.1", features = ["image"] }
native-dialog = "0.7.0"
opener = "0.7.2"
iced_aw = "0.12.0"
chrono = "0.4.40"
serde = "1.0.218"
serde_json = "1.0.140"

# typst = "0.13.0"  # this looks like the way

# tectonic = "0.15.0" this crate has some problems
# tectonic = "0.14.1"
# tectonic = { path = "../tectonic/" }

# [profile.test.build-override]
# rustflags = ["-Awarnings"]
