[package]
name = "remastr"
version = "0.13.0"
edition = "2021"

[dependencies]
noodles = { version = "0.90.0", features = [ "sam", "bam", "csi", "bgzf", "core" ] }
polars = "0.53.0"
ndarray = "0.15.6"
nom = "7.1.3"
rayon = "1.7.0"
counter = "0.5.7"

# [build-dependencies]
[dev-dependencies]
float-cmp = "0.9.0"
ndarray-npy = "0.8.1"

# rustup target add x86_64-pc-windows-gnu
# sudo pacman -S mingw-w64-gcc
# cargo build --target x86_64-pc-windows-gnu

# [profile.test.build-override]
# rustflags = ["-Awarnings"]

# [[bin]]
# name = "annotate"
# path = "src/annotate.rs"
# test = true

# [[bin]]
# name = "remastr"
# path = "src/main.rs"
