[package]
name = "remastr"
version = "0.13.0"
edition = "2021"

[dependencies]
noodles = { version = "0.90.0", features = [ "sam", "bam", "csi", "bgzf", "core" ] }
polars = "0.53.0"
ndarray = "0.15.6"
statrs = "0.18.0"
nom = "7.1.3"
rayon = "1.7.0"
counter = "0.5.7"
itertools = "0.14.0"

# rand_distr  = "0.6.0"     # 89,530,508    # only sampling
# statrs      = "0.18.0"    # 18,382,670    # only distributions
# probability = "0.20.3"    # 1,335,913
# rv          = "0.19.1"    # 1,020,347
# rstat       = "0.6.0"     # 17,268
# ruststat    = "0.1.5"     # 1,751

# [build-dependencies]
[dev-dependencies]
float-cmp = "0.9.0"
ndarray-npy = "0.8.1"

serde = "1.0.218"
serde_json = "1.0.140"

# rustup target add x86_64-pc-windows-gnu
# sudo pacman -S mingw-w64-gcc
# cargo build --target x86_64-pc-windows-gnu

# [profile.test.build-override]
# rustflags = ["-Awarnings"]

# [[bin]]
# name = "annotate"
# path = "src/annotate.rs"
# test = true

# [[bin]]
# name = "remastr"
# path = "src/main.rs"
