[project]
name = "dante-py"
version = "0.12.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "scipy>=1.16.3",
]

[dependency-groups]
# uv add --dev <pkg>
dev = [
    "pylint>=4.0.4",
    "pytest>=9.0.2",
    "vulture>=2.14",
]
